--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 const currentYear = new Date().getFullYear();
 ---
 
-<!------------------------------- FOOTER ------------------------------->
+<!------------------------------- Footer ------------------------------->
 <footer class="bg-champagne shadow-md-top text-white p-8">
 
   <!------------------------------- Logo and line ------------------------------->
