--- a/src/components/HeaderSmall.astro
+++ b/src/components/HeaderSmall.astro
@@ -19,7 +19,7 @@ const links = [
     {links.map(link => (
       <a 
         href={link.href} 
-        class="text-olive text-2xl hover:text-brown-beige transition font-medium"
+        class="text-olive text-lg hover:text-brown-beige transition font-medium"
       >
         {link.name}
       </a>
