--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,9 +6,10 @@ import AboutSection from '../components/AboutSection.astro';
 <Layout>
 <ImageBannerWide
   title="Vi på Gläntan"
-  text="Djurfoder till både vilda och tama djur."
+  text="Djurfoder till både vilda och tama djur"
   buttonText="Kontakta oss"
-  backgroundImage="/images/hero-bg-two.jpg"
+  backgroundImage="/images/gang-glantan.jpg"
+  backgroundPosition="center top 22%"
 />
 <AboutSection />
 </Layout>
