--- a/src/pages/shop.astro
+++ b/src/pages/shop.astro
@@ -7,8 +7,8 @@ import ServicesSection from '../components/ServicesSection.astro';
 <ImageBannerWide
   title="Butik"
   text="Köp det bästa fodret till ditt djur."
-  buttonText="Besök vår butik"
-  backgroundImage="/images/hero-bg-two.jpg"
+  backgroundImage="/images/cows.jpg"
+  backgroundPosition="center top 60%"
   />
 <ServicesSection />
 </Layout>
