--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,35 +17,47 @@ import ImageBanner from "../components/ImageBanner.astro";
     <div
       class="flex flex-col md:flex-row justify-center items-center gap-20 max-w-[90%] mx-auto">
 
-      <div class="text-center">
-        <img src="/images/horses.jpg" alt="horse" class="w-30 h-30 object-cover rounded-full mx-auto mb-4"/>
-        <h3 class="text-xl font-semibold uppercase text-olive"> Häst </h3>
-      </div>
+      <a href="/shop" class="">
+        <div class="text-center">
+          <img src="/images/horses.jpg" alt="horse" class="w-30 h-30 object-cover rounded-full mx-auto mb-4"/>
+          <h3 class="text-xl font-semibold uppercase text-olive"> Häst </h3>
+        </div>
+      </a>
 
-      <div class="text-center">
-        <img src="/images/birds.jpg" alt="bird" class="w-30 h-30 object-cover rounded-full mx-auto mb-4"/>
-        <h3 class="text-xl font-semibold uppercase text-olive"> Fågel </h3>
-      </div>
+      <a href="/shop" class="">
+        <div class="text-center">
+          <img src="/images/birds.jpg" alt="bird" class="w-30 h-30 object-cover rounded-full mx-auto mb-4"/>
+          <h3 class="text-xl font-semibold uppercase text-olive"> Fågel </h3>
+        </div>
+      </a>
 
-      <div class="text-center">
-        <img src="/images/bunny.jpg" alt="bunny" class="w-30 h-30 object-cover rounded-full mx-auto mb-4"/>
-        <h3 class="text-xl font-semibold uppercase text-olive"> Kanin </h3>
-      </div>
+      <a href="/shop" class="">
+        <div class="text-center">
+          <img src="/images/bunny.jpg" alt="bunny" class="w-30 h-30 object-cover rounded-full mx-auto mb-4"/>
+          <h3 class="text-xl font-semibold uppercase text-olive"> Kanin </h3>
+        </div>
+      </a>
 
-      <div class="text-center">
-        <img src="/images/deer.jpg" alt="deer" class="w-30 h-30 object-cover rounded-full mx-auto mb-4"/>
-        <h3 class="text-xl font-semibold uppercase text-olive"> Rådjur </h3>
-      </div>
+      <a href="/shop" class="">
+        <div class="text-center">
+          <img src="/images/deer.jpg" alt="deer" class="w-30 h-30 object-cover rounded-full mx-auto mb-4"/>
+          <h3 class="text-xl font-semibold uppercase text-olive"> Rådjur </h3>
+        </div>
+      </a>
 
-      <div class="text-center">
-        <img src="/images/dog.jpg" alt="dog" class="w-30 h-30 object-cover rounded-full mx-auto mb-4"/>
-        <h3 class="text-xl font-semibold uppercase text-olive"> Hund </h3>
-      </div>
+      <a href="/shop" class="">
+        <div class="text-center">
+          <img src="/images/dog.jpg" alt="dog" class="w-30 h-30 object-cover rounded-full mx-auto mb-4"/>
+          <h3 class="text-xl font-semibold uppercase text-olive"> Hund </h3>
+        </div>
+      </a>
 
-      <div class="text-center">
-        <img src="/images/cat.jpg" alt="cat" class="w-30 h-30 object-cover rounded-full mx-auto mb-4"/>
-        <h3 class="text-xl font-semibold uppercase text-olive"> Katt </h3>
-      </div>
+      <a href="/shop" class="">
+        <div class="text-center">
+          <img src="/images/cat.jpg" alt="cat" class="w-30 h-30 object-cover rounded-full mx-auto mb-4"/>
+          <h3 class="text-xl font-semibold uppercase text-olive"> Katt </h3>
+        </div>
+      </a>
 
     </div>
   </section>
@@ -82,7 +94,7 @@ import ImageBanner from "../components/ImageBanner.astro";
             <p class="mb-4"> Small breed 15kg </p>
 
             <!--- Button --->
-            <a href="/kontakt" class="inline-block bg-olive text-white font-semibold px-20 py-2 rounded-lg hover:bg-brown-beige transition uppercase"> Köp </a>
+            <a href="/shop" class="inline-block bg-olive text-white font-semibold px-20 py-2 rounded-lg hover:bg-brown-beige transition uppercase"> Köp </a>
           </div>
 
         </div>
@@ -99,7 +111,7 @@ import ImageBanner from "../components/ImageBanner.astro";
             <p class="mb-4"> Adult breed 22kg </p>
 
             <!--- Button --->
-            <a href="/kontakt" class="inline-block bg-olive text-white font-semibold px-20 py-2 rounded-lg hover:bg-brown-beige transition uppercase"> Köp </a>
+            <a href="/shop" class="inline-block bg-olive text-white font-semibold px-20 py-2 rounded-lg hover:bg-brown-beige transition uppercase"> Köp </a>
           </div>
 
         </div>
@@ -116,7 +128,7 @@ import ImageBanner from "../components/ImageBanner.astro";
             <p class="mb-4"> Alergic breed 10kg </p>
 
             <!--- Button --->
-            <a href="/kontakt" class="inline-block bg-olive text-white font-semibold px-20 py-2 rounded-lg hover:bg-brown-beige transition uppercase"> Köp </a>
+            <a href="/shop" class="inline-block bg-olive text-white font-semibold px-20 py-2 rounded-lg hover:bg-brown-beige transition uppercase"> Köp </a>
           </div>
 
         </div>
@@ -133,7 +145,7 @@ import ImageBanner from "../components/ImageBanner.astro";
             <p class="mb-4"> Vegan breed 8kg </p>
 
             <!--- Button --->
-            <a href="/kontakt" class="inline-block bg-olive text-white font-semibold px-20 py-2 rounded-lg hover:bg-brown-beige transition uppercase"> Köp </a>
+            <a href="/shop" class="inline-block bg-olive text-white font-semibold px-20 py-2 rounded-lg hover:bg-brown-beige transition uppercase"> Köp </a>
           </div>
 
         </div>
