--- a/src/pages/shop.astro
+++ b/src/pages/shop.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro'
 import ImageBannerWide from '../components/ImageBannerWide.astro';
-import ServicesSection from '../components/ServicesSection.astro';
+import ShopSection from '../components/ShopSection.astro';
 ---
 <Layout>
 <ImageBannerWide
@@ -10,6 +10,6 @@ import ServicesSection from '../components/ServicesSection.astro';
   backgroundImage="/images/cows.jpg"
   backgroundPosition="center top 60%"
   />
-<ServicesSection />
+<ShopSection />
 </Layout>
 
