--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -165,7 +165,7 @@ import ImageBanner from "../components/ImageBanner.astro";
     <p class="mb-6 text-xl uppercase font-thin"> Skriv till oss så ser vi om vi kan lösa det. </p>
 
     <!-------- Button -------->
-    <a href="/kontakt" class="inline-block bg-olive text-white font-semibold px-6 py-3 rounded-lg hover:bg-brown-beige transition uppercase"> Kontakta oss </a>
+    <a href="/contact" class="inline-block bg-olive text-white font-semibold px-6 py-3 rounded-lg hover:bg-brown-beige transition uppercase"> Kontakta oss </a>
 
   </section>
 
