--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,7 @@ const currentYear = new Date().getFullYear();
 
   <!------------------------------- Logo and line ------------------------------->
   <div class="max-w-[95%] mx-auto mb-8 border-b border-olive pb-4 flex justify-center md:justify-end">
-       <img src="/images/logo-round.png" alt="Gläntans djur och natur" class="h-20 w-auto mb-4"/>
+    <a href="/" class="inline-block font-semibold rounded-lg uppercase"> <img src="/images/logo-round.png" alt="Gläntans djur och natur" class="h-20 w-auto mb-4"/> </a>
   </div>
 
   <!------------------------------- Navigation, contact and SoMe ------------------------------->
