--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,8 +8,9 @@ const links2 = [
   { name: "Kontakt", href: "/contact" },
 ];
 ---
+
 <!------------------------------- HEADER ------------------------------->
-<header class="h-[50vh] bg-champagne text-center flex items-center justify-center gap-20 shadow-md">
+<header id="site-header" class="sticky top-0 w-full h-[50vh] bg-champagne/70 text-center flex items-center justify-center gap-20 shadow-md transition-all duration-300 z-50 py-10 backdrop-blur-sm">
   
   <!-------- Navigation part one -------->
   <nav class="space-x-6 w-56 uppercase">
