--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,5 +29,34 @@ import '../styles/global.css'; // Importera globala stilar
     </main>
     
     <Footer />
+
   </body>
 </html>
+
+    <!------ Header sticky -->
+    <script is:inline>
+  if (typeof window !== "undefined") {
+    const header = document.getElementById("site-header");
+
+    const onScroll = () => {
+      const scrolled = window.scrollY > 120; // höjd där det ska krympa
+
+      if (!header) return;
+
+      if (scrolled) {
+        // LITEN HEADER
+        header.classList.remove("h-[50vh]");
+        header.classList.add("h-20", "bg-champagne/10", "shadow-md");
+      } else {
+        // STOR HEADER
+        header.classList.add("h-[50vh]");
+        header.classList.remove("h-20");
+        // om du vill att den ska vara mer transparent i toppen:
+        //header.classList.remove("bg-champagne/90");
+      }
+    };
+
+    window.addEventListener("scroll", onScroll);
+    onScroll(); // kör en gång vid load
+  }
+    </script>
