--- a/src/components/HeaderSmall.astro
+++ b/src/components/HeaderSmall.astro
@@ -1,22 +1,36 @@
 ---
-const links = [
+const links1 = [
   { name: "Hem", href: "/" },
   { name: "Gläntan", href: "/about" },
+];
+const links2 = [
   { name: "Butik", href: "/shop" },
   { name: "Kontakt", href: "/contact" },
 ];
 ---
 <!------------------------------- Header small ------------------------------->
-<header class="h-[15vh] bg-champagne p-10 flex items-center justify-between gap-20 shadow-md">
+<header class="h-25 sticky top-0 z-50 bg-champagne p-10 flex items-center justify-center gap-20 shadow-md">
   
+  <!-------- Navigation part 1-------->
+  <nav class="space-x-6 uppercase">
+    {links1.map(link => (
+      <a 
+        href={link.href} 
+        class="text-olive text-lg hover:text-brown-beige transition font-medium"
+      >
+        {link.name}
+      </a>
+    ))}
+  </nav>
+
   <!-------- Logo -------->
   <a href="/" class="">
     <img src="/images/logo-round.png" alt="Gläntans djur och natur" class="h-20 w-auto"/>
   </a>
 
-  <!-------- Navigation -------->
+  <!-------- Navigation part 2 -------->
   <nav class="space-x-6 uppercase">
-    {links.map(link => (
+    {links2.map(link => (
       <a 
         href={link.href} 
         class="text-olive text-lg hover:text-brown-beige transition font-medium"
