cleaning up the code

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,10 +15,7 @@ const links2 = [
   <!-------- Navigation part one -------->
   <nav class="space-x-6 w-56 uppercase">
     {links1.map(link => (
-      <a 
-        href={link.href} 
-        class="text-olive text-2xl hover:text-brown-beige transition"
-      >
+      <a  href={link.href} class="text-olive text-2xl hover:text-brown-beige transition">
         {link.name}
       </a>
     ))}
@@ -32,10 +29,7 @@ const links2 = [
   <!-------- Navigation part two -------->
   <nav class="space-x-6 w-56 uppercase">
     {links2.map(link => (
-      <a 
-        href={link.href} 
-        class="text-olive text-2xl hover:text-brown-beige transition font-medium"
-      >
+      <a  href={link.href} class="text-olive text-2xl hover:text-brown-beige transition">
         {link.name}
       </a>
     ))}
