--- a/src/components/HeaderSmall.astro
+++ b/src/components/HeaderSmall.astro
@@ -14,10 +14,7 @@ const links2 = [
   <!-------- Navigation part 1-------->
   <nav class="space-x-6 uppercase">
     {links1.map(link => (
-      <a 
-        href={link.href} 
-        class="text-olive text-lg hover:text-brown-beige transition"
-      >
+      <a href={link.href} class="text-olive text-lg hover:text-brown-beige transition">
         {link.name}
       </a>
     ))}
@@ -31,10 +28,7 @@ const links2 = [
   <!-------- Navigation part 2 -------->
   <nav class="space-x-6 uppercase">
     {links2.map(link => (
-      <a 
-        href={link.href} 
-        class="text-olive text-lg hover:text-brown-beige transition"
-      >
+      <a href={link.href} class="text-olive text-lg hover:text-brown-beige transition">
         {link.name}
       </a>
     ))}
