--- a/src/pages/prices.astro
+++ b/src/pages/prices.astro
@@ -1,5 +1,5 @@
 <!------------------------------- Återsäljare och priser ------------------------------->
-<div class="border-b border-green-color" x-data="{ selected: null }">
+<!-- <div class="border-b border-green-color" x-data="{ selected: null }">
 
         {% for item in include.accordion-source %}
 
@@ -14,9 +14,9 @@
                             </span> 
                             {{ item.question }} 
                         </h4>
-                        <span class="transition-all duration-500" x-bind:style="selected == {{ forloop.index }} ? 'transform: rotate(-180deg);' : ''"> 
+                        <span class="transition-all duration-500" x-bind:style="selected == {{ forloop.index }} ? 'transform: rotate(-180deg);' : ''">  -->
                              <!-- Iconoir Arrow --> 
-                            <?xml version="1.0" encoding="UTF-8"?><svg width="24px" height="24px" stroke-width="1.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" color="#000000"><path d="M12 8V16M12 16L15.5 12.5M12 16L8.5 12.5" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path><path d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
+                            <!-- <?xml version="1.0" encoding="UTF-8"?><svg width="24px" height="24px" stroke-width="1.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" color="#000000"><path d="M12 8V16M12 16L15.5 12.5M12 16L8.5 12.5" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path><path d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
                         </span>
                     </div>
                 </button>
@@ -35,4 +35,4 @@
             </div>
 
         {% endfor %}
-</div>
+</div> -->
